simulation_code/jitfailure-ffc_form_74d937094ade8f29f005e97b083181d387b7a9f6/error.log
/tmp/tmpg3za5f2t/ffc_form_74d937094ade8f29f005e97b083181d387b7a9f6.cpp: In member function ‘virtual void ffc_form_74d937094ade8f29f005e97b083181d387b7a9f6_cell_integral_main_otherwise::tabulate_tensor(double*, const double* const*, const double*, int) const’:
/tmp/tmpg3za5f2t/ffc_form_74d937094ade8f29f005e97b083181d387b7a9f6.cpp:126:18: error: redeclaration of ‘const double J_c0’
     const double J_c0 = coordinate_dofs[0] * FE27_C0_D001_Q5[0][0][0] + coordinate_dofs[3] * FE27_C0_D001_Q5[0][0][1];
                  ^~~~
/tmp/tmpg3za5f2t/ffc_form_74d937094ade8f29f005e97b083181d387b7a9f6.cpp:121:18: note: ‘const double J_c0’ previously declared here
     const double J_c0 = coordinate_dofs[0] * FE27_C0_D001_Q5[0][0][0] + coordinate_dofs[3] * FE27_C0_D001_Q5[0][0][1];
                  ^~~~
/tmp/tmpg3za5f2t/ffc_form_74d937094ade8f29f005e97b083181d387b7a9f6.cpp:127:18: error: redeclaration of ‘const double J_c4’
     const double J_c4 = coordinate_dofs[1] * FE27_C0_D001_Q5[0][0][0] + coordinate_dofs[7] * FE27_C0_D001_Q5[0][0][1];
                  ^~~~
/tmp/tmpg3za5f2t/ffc_form_74d937094ade8f29f005e97b083181d387b7a9f6.cpp:117:18: note: ‘const double J_c4’ previously declared here
     const double J_c4 = coordinate_dofs[1] * FE27_C0_D001_Q5[0][0][0] + coordinate_dofs[7] * FE27_C0_D001_Q5[0][0][1];
                  ^~~~
/tmp/tmpg3za5f2t/ffc_form_74d937094ade8f29f005e97b083181d387b7a9f6.cpp:128:18: error: redeclaration of ‘const double J_c8’
     const double J_c8 = coordinate_dofs[2] * FE27_C0_D001_Q5[0][0][0] + coordinate_dofs[11] * FE27_C0_D001_Q5[0][0][1];
                  ^~~~
/tmp/tmpg3za5f2t/ffc_form_74d937094ade8f29f005e97b083181d387b7a9f6.cpp:118:18: note: ‘const double J_c8’ previously declared here
     const double J_c8 = coordinate_dofs[2] * FE27_C0_D001_Q5[0][0][0] + coordinate_dofs[11] * FE27_C0_D001_Q5[0][0][1];
                  ^~~~
/tmp/tmpg3za5f2t/ffc_form_74d937094ade8f29f005e97b083181d387b7a9f6.cpp:129:18: error: redeclaration of ‘const double J_c5’
     const double J_c5 = coordinate_dofs[1] * FE27_C0_D001_Q5[0][0][0] + coordinate_dofs[10] * FE27_C0_D001_Q5[0][0][1];
                  ^~~~
/tmp/tmpg3za5f2t/ffc_form_74d937094ade8f29f005e97b083181d387b7a9f6.cpp:119:18: note: ‘const double J_c5’ previously declared here
     const double J_c5 = coordinate_dofs[1] * FE27_C0_D001_Q5[0][0][0] + coordinate_dofs[10] * FE27_C0_D001_Q5[0][0][1];
                  ^~~~
/tmp/tmpg3za5f2t/ffc_form_74d937094ade8f29f005e97b083181d387b7a9f6.cpp:130:18: error: redeclaration of ‘const double J_c7’
     const double J_c7 = coordinate_dofs[2] * FE27_C0_D001_Q5[0][0][0] + coordinate_dofs[8] * FE27_C0_D001_Q5[0][0][1];
                  ^~~~
/tmp/tmpg3za5f2t/ffc_form_74d937094ade8f29f005e97b083181d387b7a9f6.cpp:120:18: note: ‘const double J_c7’ previously declared here
     const double J_c7 = coordinate_dofs[2] * FE27_C0_D001_Q5[0][0][0] + coordinate_dofs[8] * FE27_C0_D001_Q5[0][0][1];
                  ^~~~
/tmp/tmpg3za5f2t/ffc_form_74d937094ade8f29f005e97b083181d387b7a9f6.cpp:131:18: error: redeclaration of ‘const double J_c1’
     const double J_c1 = coordinate_dofs[0] * FE27_C0_D001_Q5[0][0][0] + coordinate_dofs[6] * FE27_C0_D001_Q5[0][0][1];
                  ^~~~
/tmp/tmpg3za5f2t/ffc_form_74d937094ade8f29f005e97b083181d387b7a9f6.cpp:122:18: note: ‘const double J_c1’ previously declared here
     const double J_c1 = coordinate_dofs[0] * FE27_C0_D001_Q5[0][0][0] + coordinate_dofs[6] * FE27_C0_D001_Q5[0][0][1];
                  ^~~~
/tmp/tmpg3za5f2t/ffc_form_74d937094ade8f29f005e97b083181d387b7a9f6.cpp:132:18: error: redeclaration of ‘const double J_c6’
     const double J_c6 = coordinate_dofs[2] * FE27_C0_D001_Q5[0][0][0] + coordinate_dofs[5] * FE27_C0_D001_Q5[0][0][1];
                  ^~~~
/tmp/tmpg3za5f2t/ffc_form_74d937094ade8f29f005e97b083181d387b7a9f6.cpp:123:18: note: ‘const double J_c6’ previously declared here
     const double J_c6 = coordinate_dofs[2] * FE27_C0_D001_Q5[0][0][0] + coordinate_dofs[5] * FE27_C0_D001_Q5[0][0][1];
                  ^~~~
/tmp/tmpg3za5f2t/ffc_form_74d937094ade8f29f005e97b083181d387b7a9f6.cpp:133:18: error: redeclaration of ‘const double J_c3’
     const double J_c3 = coordinate_dofs[1] * FE27_C0_D001_Q5[0][0][0] + coordinate_dofs[4] * FE27_C0_D001_Q5[0][0][1];
                  ^~~~
/tmp/tmpg3za5f2t/ffc_form_74d937094ade8f29f005e97b083181d387b7a9f6.cpp:124:18: note: ‘const double J_c3’ previously declared here
     const double J_c3 = coordinate_dofs[1] * FE27_C0_D001_Q5[0][0][0] + coordinate_dofs[4] * FE27_C0_D001_Q5[0][0][1];
                  ^~~~
/tmp/tmpg3za5f2t/ffc_form_74d937094ade8f29f005e97b083181d387b7a9f6.cpp:134:18: error: redeclaration of ‘const double J_c2’
     const double J_c2 = coordinate_dofs[0] * FE27_C0_D001_Q5[0][0][0] + coordinate_dofs[9] * FE27_C0_D001_Q5[0][0][1];
                  ^~~~
/tmp/tmpg3za5f2t/ffc_form_74d937094ade8f29f005e97b083181d387b7a9f6.cpp:125:18: note: ‘const double J_c2’ previously declared here
     const double J_c2 = coordinate_dofs[0] * FE27_C0_D001_Q5[0][0][0] + coordinate_dofs[9] * FE27_C0_D001_Q5[0][0][1];
                  ^~~~
